# mover4_checkers

./: .gitignore
devel/: .catkin  .rosinstall  setup.sh
devel/include/checkers_test/: floats.h
devel/share/camera_test/cmake/: camera_testConfig.cmake
devel/share/checkers_test/cmake/: checkers_testConfig.cmake  (+2 more)
install/: .rosinstall  _setup_util.py  setup.sh
src/Mover4/: cpr_RS232CAN.h
src/Mover4/Debug/: Mover4  cpr_InputKeyboard.d  cpr_KinematicMover.d  cpr_Matrix4.d  cpr_PCAN.d  cpr_RS232CAN.d  cpr_mover4.d
src/camera_test/: CMakeLists.txt  package.xml
src/camera_test/scripts/: ah.py  base.py  camera_test.py  checkers_ai.py  hackerrank_checkers_ai.py  mainwindow.ui  min_square.py  pozicije2  process.py  record.py  rospy  ui_about.py  ui_main.py
src/checkers_main/: CMakeLists.txt  package.xml
src/checkers_main/src/build-hello_world-Desktop_Qt_5_8_0_GCC_64bit-Debug/: Makefile  hello_world  moc_mainwindow.cpp  moc_ui_mainwindow.cpp_parameters  ui_mainwindow.h
src/checkers_main/src/hello_world/: hello_world.pro  main.cpp  mainwindow.ui  moc_mainwindow.cpp_parameters
src/checkers_test/: CMakeLists.txt  package.xml
src/checkers_test/include/: matrix.h  moving.h  trajectory.h
src/checkers_test/src/: matrix.cpp  moving.cpp  trajectory.cpp
src/cpr_mover/include/: ProtocolCPRCAN.h  cpr_mover.h  kinematics.h
src/cpr_mover/src/: ProtocolCPRCAN.cpp  cpr_mover.cpp  kinematics.cpp
src/cpr_rviz_plugin/: cpr_mover4.rviz
src/cpr_rviz_plugin/src/: moc_teleop_panel.cpp_parameters  teleop_panel.cpp  teleop_panel.h
src/lab_teleop/: CMakeLists.txt  lab_teleop.sublime-workspace  package.xml
src/lab_teleop/scripts/: abb_teleop.py  mover_teleop.py
(+36 files in other folders)
